syntax = "proto3";

package api;

service Item {
  rpc Index(IndexRequest) returns (IndexResult) {}
  rpc Create(CreateRequest) returns (CreateResult) {}
  rpc Delete(DeleteRequest) returns (DeleteResult) {}
}

message IndexRequest {
}

message IndexResult {
  repeated IndexItem items = 1;
}

message IndexItem {
  int64 id = 1;
  string name = 2;
  string url = 3;
}

message CreateRequest {
  string name = 1;
  string url = 2;
}

message CreateResult {
  int64 id = 1;
  string name = 2;
  string url = 3;
}

message DeleteRequest {
  int64 id = 1;
}

message DeleteResult {}
